--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,7 @@
-[package]
-name = "rust-concepts"
-version = "0.1.0"
-authors = ["rektdeckard <friedtm@gmail.com>"]
-edition = "2018"
+[workspace]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-rand = "0.5.0"
+members = [
+    "traits",
+    "standard",
+    "vector",
+]
