--- a/traits/Cargo.toml
+++ b/traits/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rust-concepts"
+name = "traits"
 version = "0.1.0"
 authors = ["rektdeckard <friedtm@gmail.com>"]
 edition = "2018"
